# docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/data": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns an array of JSONS with data",
                 "produces": [
                     "application/json"
@@ -30,6 +35,11 @@
         },
         "/dbstatus": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns status of PostgreSQL in json",
                 "produces": [
                     "application/json"
@@ -47,6 +57,42 @@
                         "schema": {
                             "$ref": "#/definitions/models.Status"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/delete": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Sending JSON to service and deleting in PostgreSQL",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Removing data to PostgreSQL",
+                "parameters": [
+                    {
+                        "description": "Actual data to store in db",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JsonPlaceholder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     },
                     "404": {
                         "description": "Not Found"
